fix: Skip links

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,9 @@
 			<a href="#main" class="cmp-skip-link">Skip to content</a>
 		</div>
 		{{ partial "header.html" . }}
-		{{- block "main" . }}{{ end -}}
+		<main id="main">
+			{{ block "main" . }}{{ end }}
+		</main>
 		{{ partial "footer.html" . }}
 	</body>
 </html>
