--- a/layouts/_default/home-baseof.html
+++ b/layouts/_default/home-baseof.html
@@ -3,10 +3,10 @@
   {{- partial "head.html" . -}}
   <body class="home">
     <nav>
-      <a href="#writing" class="cmp-skip-link">Jump to Writing Section</a>
-      <a href="#projects" class="cmp-skip-link">Jump to Projects Section</a>
-      <a href="#videos" class="cmp-skip-link">Jump to Videos and Presentations Section</a>
-      <a href="#about" class="cmp-skip-link">Jump to About Philip Section</a>
+      <a href="#writing" class="cmp-skip-link">Skip to Writing Section</a>
+      <a href="#projects" class="cmp-skip-link">Skip to Projects Section</a>
+      <a href="#videos" class="cmp-skip-link">Skip to Videos and Presentations Section</a>
+      <a href="#about" class="cmp-skip-link">Skip to About Philip Section</a>
     </nav>
     {{- block "main" . }}{{ end -}}
     {{ partial "footer.html" . }}
