--- a/assets/styles/elements/_universal.css
+++ b/assets/styles/elements/_universal.css
@@ -5,4 +5,8 @@
 :focus-visible {
   outline: 4px solid var(--color-alt);
   outline-offset: 4px;
+
+  @media (prefers-color-mode: dark) {
+    outline: 4px solid var(--color-primary);
+  }
 }
