--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,27 +1,35 @@
 {{ define "main" }}
-  {{ .Scratch.Set "tag" "content"}}
-  {{ range .Params.tags }}{{ $.Scratch.Set "tag" (lower .) }}{{end}}
-  {{ $tag := $.Scratch.Get "tag" }}
-
-  <div class="{{ if (ne $tag "")}} obj-width-{{$tag}}{{ end }}">
-    <section class="cmp-post">
+<article class="cmp-post {{- range .Params.tags }}
+  {{- $.Scratch.Set "tag" (lower .) -}}
+  {{- $tag := $.Scratch.Get "tag" }}
+  cmp-post--{{ $tag }}
+{{- end -}}{{ if not (in .Params "tags")}} cmp-post--writing{{end}}">
+  <div class="{{- range .Params.tags }}
+    {{- $.Scratch.Set "tag" (lower .) -}}
+    {{- $tag := $.Scratch.Get "tag" -}}
+    obj-width-{{ $tag }}
+  {{- end -}}{{ if not (in .Params "tags")}} obj-width-writing{{end}}">
+    <div class="cmp-post__container">
       {{- if .Title -}}
-      <h2>
-        <a href="{{ .RelPermalink }}">
+      <header class="cmp-post__header">
+        <h2 class="cmp-post__title">
           {{ .Title }}
-        </a>
-      </h2>
+        </h2>
+      </header>
       {{- end -}}
       {{- if .Date -}}
       <div class="cmp-post__meta">
-        <a href="{{ .RelPermalink }}">
+        <a class="cmp-post__meta-link" href="{{ .RelPermalink }}">
           <time datetime="{{ .Date }}">
             {{ .Date.Format "2 January 2006" }}
           </time>
         </a>
       </div>
       {{- end -}}
-      {{ .Content }}
-    </section>
+      <div class="cmp-post__content">
+        {{ .Content }}
+      </div>
+    </div>
   </div>
+</article>
 {{ end }}
