--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div class="cmp-site-header">
-  <div class="obj-width-listing">
+  <div class="obj-width-header">
     <div class="cmp-site-header__content">
       <a href="/" rel="home" class="cmp-site-header__back-button" aria-label="Back to Homepage">
         <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" height="80" width="80" class="cmp-site-header__back-svg">
