--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -1,4 +1,4 @@
-<div class="obj-width-listing">
+<div class="obj-width-header">
   <div class="cmp-site-header cmp-site-header--home">
     <div class="cmp-site-header__logo">
       <div class="cmp-logo">
