--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,20 +1,20 @@
 <div class="obj-content-width">
-  <div class="cmp-pagination">
-    {{ $paginator := .Paginator }}
-    {{ if $paginator.HasPrev }}
-      <a class="cmp-pagination__link" href="{{ .Paginator.Prev.URL }}">Previous</a>
-    {{ else }}
-      <span></span>
-    {{ end }}
-    
-    <div class="cmp-pagination__status">
-      {{ $paginator.PageNumber }} / {{ $paginator.TotalPages }}
-    </div>
-    
-    {{ if $paginator.HasNext }}
-      <a class="cmp-pagination__link" href="{{ .Paginator.Next.URL }}">Next</a>
-    {{ else }}
-      <span></span>
-    {{ end }}
-  </div>
+	<div class="cmp-pagination">
+		{{ $paginator := .Paginator }}
+		{{ if $paginator.HasPrev }}
+			<a class="cmp-pagination__link cmp-pagination__link--prev" href="{{ $paginator.Prev.URL }}">Previous</a>
+		{{ else }}
+			<span aria-hidden="true" class="cmp-pagination__link cmp-pagination__link--prev cmp-pagination__link--inactive">Previous</span>
+		{{ end }}
+
+		<div class="cmp-pagination__status">Page
+			<strong>{{ $paginator.PageNumber }}</strong> of <strong>{{ $paginator.TotalPages }}</strong>
+		</div>
+
+		{{ if $paginator.HasNext }}
+			<a class="cmp-pagination__link cmp-pagination__link--next" href="{{ $paginator.Next.URL }}">Next</a>
+		{{ else }}
+			<span aria-hidden="true" class="cmp-pagination__link cmp-pagination__link--next cmp-pagination__link--inactive">Next</span>
+		{{ end }}
+	</div>
 </div>
