fix: text link underline on WebKit browsers

--- a/assets/styles/components/_footnotes.css
+++ b/assets/styles/components/_footnotes.css
@@ -4,7 +4,9 @@
 	&:active {
 		color: var(--color-link);
 		text-underline-offset: 0.125em;
-		text-decoration: underline 2px var(--link-underline);
+		text-decoration: underline;
+		text-decoration-thickness: 2px;
+		text-decoration-color: var(--link-underline);
 		transition:
 			color var(--animation-duration) var(--animation-timing),
 			text-decoration-color var(--animation-duration) var(--animation-timing),
