--- a/assets/styles/elements/_a.css
+++ b/assets/styles/elements/_a.css
@@ -10,7 +10,9 @@ a[href]:not([class]) {
   &:active {
     color: var(--color-link);
     text-underline-offset: 0.125em;
-    text-decoration: underline 2px var(--link-underline);
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-decoration-color: var(--link-underline);
     transition:
       color var(--animation-duration) var(--animation-timing),
       text-decoration-color var(--animation-duration) var(--animation-timing),
