fix: Change site subtitle

--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -11,8 +11,8 @@
       <h1 class="cmp-site-header__title js-title">
         Philip Zastrow
       </h1>
-      <p class="cmp-site-header__description" aria-label="Frontend Design Engineer, Web Accessibility Specialist, Writer, Speaker, et al.">
-        Frontend Design Engineer<br>
+      <p class="cmp-site-header__description" aria-label="Designer, Developer, Web Accessibility Specialist, Writer, Speaker, et al.">
+        Designer and Developer<br>
         Web Accessibility Specialist<br>
         Writer, Speaker, et al.
       </p>
