feat: self-hosted video thumbnails

--- a/layouts/partials/videos.html
+++ b/layouts/partials/videos.html
@@ -5,7 +5,7 @@
         <h3 id="video-{{ .ytcode }}" class="cmp-video-list__title">{{ .title }}</h3>
         <img
           class="cmp-video-list__image"
-          src="https://img.youtube.com/vi/{{ .ytcode }}/maxresdefault.jpg"
+          src="/assets/video-thumbs/{{ .image }}"
           aria-labelledby="video-{{ .ytcode }}"
         />
       </a>
