--- a/assets/styles/components/_video-list.css
+++ b/assets/styles/components/_video-list.css
@@ -54,6 +54,8 @@
     display: block;
     border: 1px solid hsl(0deg 0% 0% / 70%);
     border-radius: var(--space-1xs);
+    max-width: unset;
+    width: 100%;
   }
 
   &__title {
