--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
  *    Welcome to the CSS file! This is subjectively the most exciting code
  *    of the website. Here we bring together the visual style of the website.
  *
- *    Our CSS is organized using Harry Roberts' (csswizardry.com) Inverted
+ *    This CSS is organized using Harry Roberts' (csswizardry.com) Inverted
  *    Triangle CSS (ITCSS) organizational approach. This method is mixed with
  *    Block Element Modifier (BEM) naming convention for class names throughout
  *    the stylesheet.
@@ -105,7 +105,7 @@
  *    Whenever third party styles are needed add them to this section,
  *    below the Components, but above the Utilities. This allows them
  *    to live alongside our styles but still be overridden if needed by
- *    a utility class. UNUSED IN THE PROJECT
+ *    a utility class. UNUSED IN THE PROJECT AT THE MOMENT
  */
 
 /* =====================================================================
