fix font weights

--- a/assets/styles/components/_pie-chart.css
+++ b/assets/styles/components/_pie-chart.css
@@ -64,6 +64,7 @@
     display: flex;
     position: relative;
     padding-left: var(--space-lg);
+    font-variation-settings: var(--primary-var-regular);
 
     &::before {
       content: '';
