--- a/assets/styles/components/_projects-list.css
+++ b/assets/styles/components/_projects-list.css
@@ -91,8 +91,8 @@
 
   &__title {
     margin: 0;
-      font-family: var(--font-secondary);
-    font-variation-settings: var(--secondary-var-light);
+    font-family: var(--font-secondary);
+    font-variation-settings: var(--secondary-var-regular);
     font-size: var(--font-sm);
     line-height: 1.2;
   }
